# go-template-lsp

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  go.mod  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: jetbrains.yml  parse.yml  server.yml  vscode.yml
demo-templates/: 01-syntax.yaml.tmpl  02-completions.yaml.tmpl  03-hover-nav.tmpl  04-diagnostics.tmpl  05-typehints.tmpl  06-funcmap.tmpl  07-type-checking.tmpl  08-allseas-modifications.tmpl  compile.go  demo.txt.tmpl
docs/: COMPLETIONS.md  HOVER.md  README.md  RESOURCES.md  TYPE_HINTS.md  configuration.md  features.md  jetbrains-configuration.md  jetbrains-plugin.md  server.md  syntax.md  testing.md  types.md  usage.md  vscode-configuration.md  vscode-extension.md  vscode-testing.md
parse/: .gitlab-ci.yml  README.md  allseas_adapter.go  allseas_adapter_test.go  go.mod  lex.go  lex_allseas.go  lex_allseas_test.go  lex_test.go  node.go  parse.go  parse_allseas.go  parse_partial_test.go  parse_partial_testcases.go  parse_test.go  readme.md
scripts/: build-server-binaries-allseas.ts  build-server-binaries.ts  generate-syntax.ts  watch-server-binaries.ts  watch-server-binaries_allseas.ts
server/: .gitlab-ci.yml  .golangci.yml  README.md  completion.go  completion_test.go  coverage  documents.go  documents_test.go  go.mod  go.sum  gowatch.yml  gowatch_allseas.yml  hover.go  initialize.go  initialize_test.go  main.go  references.go
syntax/: .gitignore  Generate.hs  Grammar.hs  Regex.hs  TextMate.hs  syntax.cabal
(+260 files in other folders)
