cabal-version: 3.0
name:          generate-syntax
version:       0.1.0.0

executable generate-syntax
  main-is:            Generate.hs
  other-modules: Grammar, TextMate, Regex
  build-depends:      base >=4.13 && <5, aeson, directory, containers, bytestring, text
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror